--- a/clients/assets/styles/sender.css
+++ b/clients/assets/styles/sender.css
@@ -16,7 +16,7 @@ p {
   position: fixed;
   z-index: -1;
   height: 25%;
-  background-color: #03A9F4;
+  background-color: #E74C3C;
   width: 100%;
   color: #FFFFFF;
 }
@@ -25,7 +25,7 @@ p {
   color: #fff;
   margin-top: 7%;
   font-size: 3em;
-  font-weight: bold;
+  font-weight: lighter;
 }
 
 .auth .mdl-card {
@@ -133,11 +133,11 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(144, 144, 144, 0.5);
+  background-color: #FFF;
 }
 
 .popup .mdl-card {
-  background-color: #03A9F4;
+  background-color: #FFF;
 }
 
 .popup .mdl-card__supporting-text {
@@ -208,7 +208,14 @@ p {
 }
 .card-preview .mdl-card {
   width: 100%;
-  background-color: #B3E5FC;
+  background-color: #E74C3C;
+}
+
+.mdl-button--accent.mdl-button--accent.mdl-button--raised,
+.mdl-button--accent.mdl-button--accent.mdl-button--fab,
+.mdl-button--accent.mdl-button--accent {
+  background-color: #E74C3C;
+  color: #FFF;
 }
 
 /* fix for weird bootstrap thing */
