--- a/clients/assets/styles/sender.css
+++ b/clients/assets/styles/sender.css
@@ -229,3 +229,11 @@ p {
   border-radius: 4px;
   margin: 0 auto;
 }
+
+.preview {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
