--- a/clients/assets/styles/receiver.css
+++ b/clients/assets/styles/receiver.css
@@ -1,29 +1,20 @@
-html, body {
-  height: 100%;
-  width: 100%;
-}
+
 
 body {
-  font-family: 'Roboto', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  zoom: 1.3;
+  zoom: 3;
 }
 
-p {
-  margin-bottom: 0;
-}
 
 .card-canvas {
-  width: 80%;
-  height: 80%;
-  display: flex;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
-  padding: 0 40px;
-  background-color: #ff5252;
+  background-color: #f00;
 }
 
 .markdown {
@@ -32,7 +23,9 @@ p {
 
 .card-canvas img {
   display: block;
-  width: 50%;
-  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 200%;
   margin: 0 auto;
 }
