--- a/clients/assets/styles/receiver.css
+++ b/clients/assets/styles/receiver.css
@@ -14,7 +14,7 @@ body {
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-color: #f00;
+  background-color: #ff0;
 }
 
 .markdown {
