--- a/clients/assets/styles/receiver.css
+++ b/clients/assets/styles/receiver.css
@@ -32,7 +32,8 @@ p {
 
 .card-canvas img {
   display: block;
-  width: 50%;
+  width: 60%;
+  height: 60%;
   border-radius: 4px;
   margin: 0 auto;
 }
