--- a/clients/assets/styles/sender.css
+++ b/clients/assets/styles/sender.css
@@ -242,8 +242,8 @@ p {
 
 .canvas img {
   display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
+  width: 80%;
+  height: auto;
+  border: none;
   margin: 0 auto;
 }
