--- a/clients/assets/styles/sender.css
+++ b/clients/assets/styles/sender.css
@@ -235,8 +235,8 @@ p {
   align-items: center;
   width: 100%;
   height: 100%;
-  padding: 0;
-  margin: 0;
+  margin: 0 auto;
+  padding: 10%;
   background-color: #ff5252;
   color: #fff;
 }
